# Xplora

./: langgraph.json  main.py  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent/: agentic_workflow.py
config/: config.yaml
debugging/: langgraph_app.py
models/: models.py
prompt_library/: agent_prompts.py
tools/: arthmatic_op.py  currency_conversion.py  expense_calculator.py  place_search_tool.py  weather_tool.py
utils/: currency_converter.py  expenses_calculator.py  model_loader.py  palce.py  save_to_document.py  weather_info.py
