[project]
name = "Xplora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "ipykernel>=6.30.1",
    "langgraph>=0.5.4",
    "langgraph-cli[studio]>=0.3.6",
    "langsmith>=0.4.8",
    "serpapi>=0.1.5",
    "setuptools>=80.9.0",
]
